--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -68,6 +68,32 @@
       },
       "args": ["serve", "storage"],
       "preLaunchTask": "make"
+    },
+    {
+      "name": "attempt.trigger.planner",
+      "type": "go",
+      "request": "launch",
+      "mode": "auto",
+      "program": "${workspaceRoot}",
+      "showLog": true,
+      "env": {
+        "KANTHOR_DEBUGGING_SERVER_PORT": "6067"
+      },
+      "args": ["serve", "attempt.trigger.planner"],
+      "preLaunchTask": "make"
+    },
+    {
+      "name": "attempt.trigger.executor",
+      "type": "go",
+      "request": "launch",
+      "mode": "auto",
+      "program": "${workspaceRoot}",
+      "showLog": true,
+      "env": {
+        "KANTHOR_DEBUGGING_SERVER_PORT": "6067"
+      },
+      "args": ["serve", "attempt.trigger.executor"],
+      "preLaunchTask": "make"
     }
   ]
 }
