--- a/docker/.kanthor/configs.yaml
+++ b/docker/.kanthor/configs.yaml
@@ -125,7 +125,7 @@ attempt:
     planner:
       schedule: "*/3 * * * *"
       timeout: 600000 # 60s
-      scan_start: -7200000 # 1h30m
+      scan_start: -86400000 # 24h
       scan_end: -300000 # 5m
       size: 500
     executor:
@@ -136,7 +136,7 @@ attempt:
     planner:
       schedule: "*/3 * * * *"
       timeout: 600000 # 60s
-      scan_start: -7200000 # 1h30m
+      scan_start: -86400000 # 24h
       scan_end: -300000 # 5m
     executor:
       timeout: 60000 # 60s
