--- a/docker/.kanthor/configs.yaml
+++ b/docker/.kanthor/configs.yaml
@@ -85,6 +85,7 @@ infrastructure:
       max_retry: 1
       timeout: 60000 # 60s
       concurrency: 1000
+      throughput: 30000
 
 # services
 sdk:
