--- a/configs.yaml
+++ b/configs.yaml
@@ -56,7 +56,7 @@ infrastructure:
       ask:
         access_key: admin@kanthorlabs.com
         secret_key: changemenow
-        # base64(key:secret): YWRtaW5Aa2FudGhvcmxhYnMuY29tOmNoYW5nZW1lbm93
+        # base64(key:secret): basic YWRtaW5Aa2FudGhvcmxhYnMuY29tOmNoYW5nZW1lbm93
     - engine: forward
       forward:
         uri: https://asia-southeast1-scrapnode-iam.cloudfunctions.net/api/auth/jwt/debug
